--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*, ::after, ::before {
+  box-sizing: inherit;
+}
+
+body {
+  width: 100%;
+  max-width: 800px;
+  margin: 80px auto;
+  padding: 10px;
+  font-family: 'Barlow Condensed', sans-serif;
+  font-size: 22px;
+  background-image: url("https://image.freepik.com/darmowe-wektory/analiza-rynku-akcji-i-handel-akcjami-symbole-walut-wykresy-biznesowe-i-globalne-transfery-pieniezne_115579-1283.jpg");
+  background-size: cover;
 }
