paragraphs in Input component removed

--- a/src/Form/Input/index.css
+++ b/src/Form/Input/index.css
@@ -1,4 +1,7 @@
 .input {
-    border-radius: 10px;
+    width: 100%;
+    max-width: 300px;
     padding: 10px;
+    border: solid 2px hsl(0, 0%, 50%);
+    border-radius: 10px;
 }
